--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,20 +2,22 @@ name: code_preview
 description: flutter code preview
 version: 0.0.2
 homepage: https://github.com/xdd666t/code_preview
+# export https_proxy=http://127.0.0.1:7890 http_proxy=http://127.0.0.1:7890 all_proxy=socks5://127.0.0.1:7890
 # flutter pub publish --server=https://pub.dartlang.org
 
 environment:
-  sdk: '>=2.19.4 <3.0.0'
-  flutter: ">=1.17.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=2.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_markdown:
+# https://pub.dev/packages/flutter_markdown
+#  flutter_markdown: ^0.6.14
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+#  flutter_test:
+#    sdk: flutter
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
