--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,7 @@ name: code_preview
 description: flutter code preview
 version: 0.1.2
 homepage: https://github.com/xdd666t/code_preview
-# export https_proxy=http://127.0.0.1:7890 http_proxy=http://127.0.0.1:7890 all_proxy=socks5://127.0.0.1:7890
-# flutter pub publish --server=https://pub.dartlang.org
+# export https_proxy=http://127.0.0.1:7890 http_proxy=http://127.0.0.1:7890 all_proxy=socks5://127.0.0.1:7890 && flutter pub publish --server=https://pub.dartlang.org
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
